--- a/package.json
+++ b/package.json
@@ -294,7 +294,7 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "source-map-support": "^0.5.9",
-    "sw-server": "git://github.com/shocknet/api.git#7c3165e3668e770c58997147402f4001bb92fbcc",
+    "sw-server": "git://github.com/Groestlcoin/shocknet-api.git",
     "tar": "^4.4.10",
     "unzip": "^0.1.11",
     "unzipper": "^0.10.5"
