--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ShockWizard",
-  "productName": "ShockWizard",
+  "name": "GroestlcoinShockWizard",
+  "productName": "Groestlcoin ShockWizard",
   "version": "0.0.44",
   "description": "Setup a Lightning Node Automatically!",
   "scripts": {
@@ -56,7 +56,7 @@
   },
   "main": "./app/main.prod.js",
   "build": {
-    "productName": "ShockWizard",
+    "productName": "Groestlcoin ShockWizard",
     "appId": "org.shockwallet.ShockWiz",
     "files": [
       "app/img/",
@@ -269,6 +269,7 @@
     "adm-zip": "^0.4.13",
     "auto-launch": "^5.0.5",
     "axios": "^0.19.0",
+    "bufferutil": "^4.0.1",
     "decompress": "^4.2.0",
     "devtron": "^1.4.0",
     "electron-debug": "^2.0.0",
@@ -287,6 +288,7 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-hot-loader": "^4.3.12",
+    "react-native": "^0.62.0",
     "react-qrcode-logo": "^2.2.0",
     "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
@@ -297,7 +299,8 @@
     "sw-server": "git://github.com/Groestlcoin/shocknet-api.git",
     "tar": "^4.4.10",
     "unzip": "^0.1.11",
-    "unzipper": "^0.10.5"
+    "unzipper": "^0.10.5",
+    "utf-8-validate": "^5.0.2"
   },
   "devEngines": {
     "node": ">=7.x",
