--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
   "main": "./app/main.prod.js",
   "build": {
     "productName": "Groestlcoin ShockWizard",
-    "appId": "org.shockwallet.ShockWiz",
+    "appId": "org.groestlcoin.shockwizard",
     "files": [
       "app/img/",
       "app/dist/",
@@ -119,9 +119,9 @@
     "url": "git+https://github.com/shocknet/Wizard.git"
   },
   "author": {
-    "name": "ShockWallet",
-    "email": "info@shock.network",
-    "url": "https://shocknet.github.io"
+    "name": "Groestlcoin ShockWallet",
+    "email": "groesltcoin@gmail.com",
+    "url": "https://groestlcoin.org"
   },
   "contributors": [
     {
@@ -133,11 +133,16 @@
       "name": "Amila Welihinda",
       "email": "amilajack@gmail.com",
       "url": "https://github.com/amilajack"
+    },
+    {
+      "name": "HashEngineering",
+      "email": "hashengineeringsolutions@gmail.com",
+      "url": "https://github.com/HashEngineering"
     }
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/shocknet/Wizard/issues"
+    "url": "https://github.com/Groestlcoin/ShockWizard/issues"
   },
   "keywords": [
     "electron",
@@ -150,7 +155,7 @@
     "hot",
     "reload"
   ],
-  "homepage": "https://github.com/shocknet/Wizard#readme",
+  "homepage": "https://github.com/Groestlcoin/ShockWizard#readme",
   "jest": {
     "testURL": "http://localhost/",
     "moduleNameMapper": {
